Invalidate the caret's position while we can still figure out which continuing frame we are in. bug 336637, r+sr=roc